--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,14 +4,14 @@
 %table#movies
   %thead
     %tr
-      %th Movie Title
-      %th Rating
-      %th Release Date
+      %th{class: class_for_order_column('title', @order_column)}= link_to "Movie Title", movies_path(col: :title), :id => 'title_header'
+      %th{class: class_for_order_column('rating', @order_column)}= link_to "Rating", movies_path(col: :rating)
+      %th{class: class_for_order_column('release_date', @order_column)}= link_to "Release Date", movies_path(col: :release_date)
       %th More Info
   %tbody
     - @movies.each do |movie|
       %tr
-        %td= movie.title 
+        %td= movie.title
         %td= movie.rating
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
