--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,9 @@
 %table#movies
   %thead
     %tr
-      %th{class: class_for_order_column('title', @order_column)}= link_to "Movie Title", movies_path(col: :title), :id => 'title_header'
+      %th{class: class_for_order_column('title', @order_column)}= link_to "Movie Title", movies_path(col: :title), :id => "title_header"
       %th{class: class_for_order_column('rating', @order_column)}= link_to "Rating", movies_path(col: :rating)
-      %th{class: class_for_order_column('release_date', @order_column)}= link_to "Release Date", movies_path(col: :release_date)
+      %th{class: class_for_order_column('release_date', @order_column)}= link_to "Release Date", movies_path(col: :release_date), :id => "release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
